renamed regression file and added blank lr file

--- a/Regression.ipynb
+++ b/Regression.ipynb
@@ -17,7 +17,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Logistic Regression\n",
+    "# Linear Regression\n",
     "Problem Statement\n",
     "\n",
     "You are given the air quality data of few major cities in India. This data includes several air quality related variables such as PM2.5, PM10, NOx, CO etc. and Air quality index (AQI). Your task is to learn a regression model on the given data to predict AQI from the input variables"
