--- a/Naive,DT,kNN.ipynb
+++ b/Naive,DT,kNN.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
     "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "from sklearn.naive_bayes import GaussianNB, BernoulliNB\n",
-    "\n"
+    "from sklearn.model_selection import KFold,cross_val_score\n"
    ]
   },
   {
@@ -375,16 +375,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy Score :  0.6979166666666666\n",
-      "Confusion Matrix :  [[91 34]\n",
-      " [24 43]]\n"
+      "Accuracy Score :  0.7135416666666666\n",
+      "Confusion Matrix :  [[92 33]\n",
+      " [22 45]]\n"
      ]
     }
    ],
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [
     {
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -474,36 +474,141 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "Classification metrics can't handle a mix of binary and continuous targets",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32mx:\\GIt\\CP 318 Worksheet Practise\\Naive,DT,kNN.ipynb Cell 16\u001b[0m line \u001b[0;36m3\n\u001b[0;32m      <a href='vscode-notebook-cell:/x%3A/GIt/CP%20318%20Worksheet%20Practise/Naive%2CDT%2CkNN.ipynb#X23sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m#averaging predictions\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/x%3A/GIt/CP%20318%20Worksheet%20Practise/Naive%2CDT%2CkNN.ipynb#X23sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m avg_pred \u001b[39m=\u001b[39m (pred_dt\u001b[39m+\u001b[39mpred_kNN\u001b[39m+\u001b[39mpred_bnb)\u001b[39m/\u001b[39m\u001b[39m3\u001b[39m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/x%3A/GIt/CP%20318%20Worksheet%20Practise/Naive%2CDT%2CkNN.ipynb#X23sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m accuracy_score(y_test,avg_pred)\n",
-      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python311\\site-packages\\sklearn\\utils\\_param_validation.py:211\u001b[0m, in \u001b[0;36mvalidate_params.<locals>.decorator.<locals>.wrapper\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m    205\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[0;32m    206\u001b[0m     \u001b[39mwith\u001b[39;00m config_context(\n\u001b[0;32m    207\u001b[0m         skip_parameter_validation\u001b[39m=\u001b[39m(\n\u001b[0;32m    208\u001b[0m             prefer_skip_nested_validation \u001b[39mor\u001b[39;00m global_skip_validation\n\u001b[0;32m    209\u001b[0m         )\n\u001b[0;32m    210\u001b[0m     ):\n\u001b[1;32m--> 211\u001b[0m         \u001b[39mreturn\u001b[39;00m func(\u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n\u001b[0;32m    212\u001b[0m \u001b[39mexcept\u001b[39;00m InvalidParameterError \u001b[39mas\u001b[39;00m e:\n\u001b[0;32m    213\u001b[0m     \u001b[39m# When the function is just a wrapper around an estimator, we allow\u001b[39;00m\n\u001b[0;32m    214\u001b[0m     \u001b[39m# the function to delegate validation to the estimator, but we replace\u001b[39;00m\n\u001b[0;32m    215\u001b[0m     \u001b[39m# the name of the estimator by the name of the function in the error\u001b[39;00m\n\u001b[0;32m    216\u001b[0m     \u001b[39m# message to avoid confusion.\u001b[39;00m\n\u001b[0;32m    217\u001b[0m     msg \u001b[39m=\u001b[39m re\u001b[39m.\u001b[39msub(\n\u001b[0;32m    218\u001b[0m         \u001b[39mr\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mparameter of \u001b[39m\u001b[39m\\\u001b[39m\u001b[39mw+ must be\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[0;32m    219\u001b[0m         \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mparameter of \u001b[39m\u001b[39m{\u001b[39;00mfunc\u001b[39m.\u001b[39m\u001b[39m__qualname__\u001b[39m\u001b[39m}\u001b[39;00m\u001b[39m must be\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[0;32m    220\u001b[0m         \u001b[39mstr\u001b[39m(e),\n\u001b[0;32m    221\u001b[0m     )\n",
-      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python311\\site-packages\\sklearn\\metrics\\_classification.py:220\u001b[0m, in \u001b[0;36maccuracy_score\u001b[1;34m(y_true, y_pred, normalize, sample_weight)\u001b[0m\n\u001b[0;32m    154\u001b[0m \u001b[39m\u001b[39m\u001b[39m\"\"\"Accuracy classification score.\u001b[39;00m\n\u001b[0;32m    155\u001b[0m \n\u001b[0;32m    156\u001b[0m \u001b[39mIn multilabel classification, this function computes subset accuracy:\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    216\u001b[0m \u001b[39m0.5\u001b[39;00m\n\u001b[0;32m    217\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[0;32m    219\u001b[0m \u001b[39m# Compute accuracy for each possible representation\u001b[39;00m\n\u001b[1;32m--> 220\u001b[0m y_type, y_true, y_pred \u001b[39m=\u001b[39m _check_targets(y_true, y_pred)\n\u001b[0;32m    221\u001b[0m check_consistent_length(y_true, y_pred, sample_weight)\n\u001b[0;32m    222\u001b[0m \u001b[39mif\u001b[39;00m y_type\u001b[39m.\u001b[39mstartswith(\u001b[39m\"\u001b[39m\u001b[39mmultilabel\u001b[39m\u001b[39m\"\u001b[39m):\n",
-      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python311\\site-packages\\sklearn\\metrics\\_classification.py:93\u001b[0m, in \u001b[0;36m_check_targets\u001b[1;34m(y_true, y_pred)\u001b[0m\n\u001b[0;32m     90\u001b[0m     y_type \u001b[39m=\u001b[39m {\u001b[39m\"\u001b[39m\u001b[39mmulticlass\u001b[39m\u001b[39m\"\u001b[39m}\n\u001b[0;32m     92\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mlen\u001b[39m(y_type) \u001b[39m>\u001b[39m \u001b[39m1\u001b[39m:\n\u001b[1;32m---> 93\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\n\u001b[0;32m     94\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mClassification metrics can\u001b[39m\u001b[39m'\u001b[39m\u001b[39mt handle a mix of \u001b[39m\u001b[39m{0}\u001b[39;00m\u001b[39m and \u001b[39m\u001b[39m{1}\u001b[39;00m\u001b[39m targets\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m.\u001b[39mformat(\n\u001b[0;32m     95\u001b[0m             type_true, type_pred\n\u001b[0;32m     96\u001b[0m         )\n\u001b[0;32m     97\u001b[0m     )\n\u001b[0;32m     99\u001b[0m \u001b[39m# We can't have more than one value on y_type => The set is no more needed\u001b[39;00m\n\u001b[0;32m    100\u001b[0m y_type \u001b[39m=\u001b[39m y_type\u001b[39m.\u001b[39mpop()\n",
-      "\u001b[1;31mValueError\u001b[0m: Classification metrics can't handle a mix of binary and continuous targets"
-     ]
+     "data": {
+      "text/plain": [
+       "0.7760416666666666"
+      ]
+     },
+     "execution_count": 156,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "#averaging predictions\n",
-    "avg_pred = (pred_dt+pred_kNN+pred_bnb)/3\n",
-    "accuracy_score(y_test,avg_pred)"
+    "#Voting Classifier\n",
+    "from sklearn.ensemble import VotingClassifier\n",
+    "\n",
+    "estimators = [#('DecisionTree',DecisionTreeClassifier())\n",
+    "              ('kNN',KNeighborsClassifier(n_neighbors=3))\n",
+    "              ,('Naive Bayes',GaussianNB())]\n",
+    "\n",
+    "ensemble = VotingClassifier(estimators,voting ='hard')\n",
+    "ensemble.fit(x_train,y_train)\n",
+    "ensemble.score(x_test,y_test)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Bagging\n",
+    "from sklearn.ensemble import BaggingClassifier\n",
+    "\n",
+    "ensemble_dt = BaggingClassifier(estimator=DecisionTreeClassifier(),n_estimators =20)\n",
+    "ensemble_kNN = BaggingClassifier(estimator=KNeighborsClassifier(n_neighbors = 3),n_estimators = 20)\n",
+    "ensemble_gNB = BaggingClassifier(estimator=GaussianNB(),n_estimators = 20,random_state=10)\n",
+    "\n",
+    "def ensemble_fit(ensemble_model):\n",
+    "    k_folds = KFold(n_splits = 10)\n",
+    "    results = cross_val_score(ensemble_model,x_train,y_train,cv = k_folds).mean()\n",
+    "    print(f'Cross_val_score with model {ensemble_model.estimator} : ',results)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 158,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cross_val_score with model DecisionTreeClassifier() :  0.7397761645493043\n",
+      "Cross_val_score with model KNeighborsClassifier(n_neighbors=3) :  0.6875378100423472\n",
+      "Cross_val_score with model GaussianNB() :  0.7225347852389595\n"
+     ]
+    }
+   ],
+   "source": [
+    "ensemble_fit(ensemble_dt)\n",
+    "ensemble_fit(ensemble_kNN)\n",
+    "ensemble_fit(ensemble_gNB)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 159,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cross_val_score with model DecisionTreeClassifier() :  0.7380217785843921\n"
+     ]
+    }
+   ],
+   "source": [
+    "#randomforest\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "\n",
+    "ensemble_fit(RandomForestClassifier())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 161,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7552083333333334"
+      ]
+     },
+     "execution_count": 161,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#adaboost\n",
+    "from sklearn.ensemble import AdaBoostClassifier\n",
+    "\n",
+    "adaboost = AdaBoostClassifier(n_estimators = 20 ,random_state=1)\n",
+    "adaboost.fit(x_train,y_train)\n",
+    "adaboost.score(x_test,y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 172,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7604166666666666"
+      ]
+     },
+     "execution_count": 172,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#gradboost\n",
+    "from sklearn.ensemble import GradientBoostingClassifier\n",
+    "model= GradientBoostingClassifier(learning_rate=0.01,random_state=1)\n",
+    "model.fit(x_train, y_train)\n",
+    "model.score(x_test, y_test)"
+   ]
   }
  ],
  "metadata": {
